--- a/src/main/java/visao/MenuPrincipal.form
+++ b/src/main/java/visao/MenuPrincipal.form
@@ -54,10 +54,10 @@
               <Component id="JPmenu" alignment="0" max="32767" attributes="0"/>
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="96" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="JBemprestimo" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="JBferramenta" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
-                      <Component id="JBamigo" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="JBferramenta" alignment="0" pref="172" max="32767" attributes="0"/>
+                      <Component id="JBamigo" alignment="0" pref="172" max="32767" attributes="0"/>
+                      <Component id="JBemprestimo" alignment="0" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace pref="112" max="32767" attributes="0"/>
               </Group>
